...

        if environment["LOVESAVING_MODE"] == "LIVE" {
            return .live
        }

        if environment["LOVESAVING_MODE"] == "UI_TEST" {
            let scenario = UITestScenario(rawValue: environment["LOVESAVING_SCENARIO"] ?? "") ?? .linked
            return .uiTest(scenario)
        }

        if isRunningTests {
            return .uiTest(.linked)
        }
...
